--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
-				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Aaron"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Tina"</span>);<br />
+				<span class="comments">// June 1, 2016, I told you I love you. </span><br />
 				i.love(u);<br />
-				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
+				<span class="comments">// You didn't accept me, but it didn't change my mind.</span><br />
 				u.accepted();<br />
-				<span class="comments">// Since then, I miss u every day.</span><br />
+				<span class="comments">// From then on, I will do my best to express my love.</span><br />
 				i.miss(u);<br />
 				<span class="comments">// And take care of u and our love.</span><br />
 				i.takeCareOf(u);<br />
-				<span class="comments">// You say that you won't be so easy to marry me.</span><br />
-				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
+				<span class="comments">// It won't be so easy to make you accept me.</span><br />
+				<span class="comments">// So I keep waiting and I will keep fighting for a better future.</span><br />
 				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br />
 				<span class="keyword">while</span> (isHesitate) {<br />
 				<span class="placeholder"/>i.waitFor(u);<br />
@@ -69,9 +69,9 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2010, 10, 2);
-		together.setHours(20);
-		together.setMinutes(0);
+		together.setFullYear(2016, 6, 1);
+		together.setHours(10);
+		together.setMinutes(10);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
 		
